--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2018"
 [dependencies]
 rand = {version = "0.8.4"}
 rand_chacha = "*"
-sha3 = "*" 
+sha3 = "*"
+blake2 = "0.9.2"
 futures = "*"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.130", features = ["derive"]}
 serde_json = "1.0"
 num-bigint = {version = "0.4", features = ["rand"]}
+chrono = "0.4"
