--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ rand = {version = "0.8.4"}
 rand_chacha = "*"
 sha3 = "*"
 blake2 = "0.9.2"
-futures = "*"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.130", features = ["derive"]}
 serde_json = "1.0"
 num-bigint = {version = "0.4", features = ["rand"]}
 chrono = "0.4"
+log = "0.4"
+env_logger = "0.9.0"
