--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ rand = {version = "0.8.4"}
 rand_chacha = "*"
 sha3 = "*"
 blake2 = "0.9.2"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.12", features = ["full"] }
 serde = { version = "1.0.130", features = ["derive"]}
 serde_json = "1.0"
 num-bigint = {version = "0.4", features = ["rand"]}
 chrono = "0.4"
 log = "0.4"
 env_logger = "0.9.0"
+thiserror = "1.0"
+anyhow = "1.0"
