--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 rand = {version = "0.8.4"}
 rand_chacha = "*"
 sha3 = "*"
+sha2 = "0.10.2"
 blake2 = "0.9.2"
 tokio = { version = "1.12", features = ["full"] }
 serde = { version = "1.0.130", features = ["derive"]}
@@ -19,3 +20,5 @@ log = "0.4"
 env_logger = "0.9.0"
 thiserror = "1.0"
 anyhow = "1.0"
+once_cell = "1.9.0"
+hex = "0.4.3"
