--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ blake2 = "0.9.2"
 tokio = { version = "1.12", features = ["full"] }
 serde = { version = "1.0.130", features = ["derive"]}
 serde_json = "1.0"
+serde-big-array = "0.4.1"
 num-bigint = {version = "0.4", features = ["rand"]}
 chrono = "0.4"
 log = "0.4"
@@ -22,3 +23,6 @@ thiserror = "1.0"
 anyhow = "1.0"
 once_cell = "1.9.0"
 hex = "0.4.3"
+tokio-tungstenite = "*"
+futures = "0.3"
+tokio-stream = "0.1"
